@@ -1,4 +1,4 @@
-.\" RCSid $Id: genBSDF.1,v 1.11 2012/06/20 00:48:54 greg Exp $
+.\" RCSid $Id: genBSDF.1,v 1.12 2012/09/02 15:33:14 greg Exp $
 .TH GENBSDF 1 9/3/2010 RADIANCE
 .SH NAME
 genBSDF - generate BSDF description from Radiance or MGF input
@@ -54,7 +54,8 @@ option may be given.
 To turn off backward components, use the
 .I \-backward
 option.
-Computing both components takes about twice as long as one component.
+Computing both components takes about twice as long as one component, but
+is recommended when rays will be impinging from either side.
 .PP
 The geometry must fit a rectangular profile, whose width is along the X-axis,
 height is in the Y-axis, and depth is in the Z-axis.
